# repo-proofer

./: .env.example  .gitignore  LICENSE  PUBLISH.md  README.md  TEST_RESULTS.md  proofer.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  proofer.yml  release.yml
docs/: DOCKER_OPTIONAL.md
download/: README.md  proofer.py
scripts/: smoke_test.py
tests/: integration_test.py
tests/fixtures/clean-repo/: README.md  main.py  requirements.txt
tests/fixtures/slop-repo/: README.md  main.py  requirements.txt
